Bug 1315283 - Allow VP9 encoder in webrtc to reconfigure if the input resolution changes. r=TD-Linux, a=gchang